--- a/app/src/main/res/layout/add_field.xml
+++ b/app/src/main/res/layout/add_field.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
-
-    <TableRow android:layout_width="match_parent"
-              android:layout_height="35dp">
+              android:layout_height="35dp"
+              android:orientation="horizontal">
 
         <Spinner
                 android:id="@+id/type_spinner_size"
@@ -21,6 +18,7 @@
                 android:hint="ต้นทุน"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
                 android:padding="5dp"
                 android:layout_weight="0.25"
                 android:gravity="center"
@@ -31,6 +29,7 @@
                 android:hint="ราคา"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
                 android:padding="5dp"
                 android:layout_weight="0.25"
                 android:gravity="center"
@@ -41,6 +40,7 @@
                 android:hint="จำนวน"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
                 android:padding="5dp"
                 android:background="@null"
                 android:layout_weight="0.25"
@@ -57,6 +57,4 @@
                 android:text="Del"
 
         />
-
-    </TableRow>
 </LinearLayout>
